--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile requirements.in
 #
-accelerate==0.24.1
+accelerate==0.29.3
     # via dragon-baseline
-aiohttp==3.8.6
+aiohttp==3.9.5
     # via
     #   datasets
     #   fsspec
@@ -16,30 +16,28 @@ arrow==1.3.0
     # via cookiecutter
 async-timeout==4.0.3
     # via aiohttp
-attrs==23.1.0
+attrs==23.2.0
     # via aiohttp
 binaryornot==0.4.4
     # via cookiecutter
-build==1.0.3
+build==1.2.1
     # via pip-tools
-certifi==2023.7.22
+certifi==2024.2.2
     # via requests
 chardet==5.2.0
     # via binaryornot
 charset-normalizer==3.3.2
-    # via
-    #   aiohttp
-    #   requests
+    # via requests
 click==8.1.7
     # via
     #   cookiecutter
     #   evalutils
     #   pip-tools
-cmake==3.27.7
+cmake==3.29.2
     # via triton
-cookiecutter==2.4.0
+cookiecutter==2.6.0
     # via evalutils
-datasets==2.14.6
+datasets==2.14.7
     # via
     #   dragon-baseline
     #   evaluate
@@ -48,19 +46,19 @@ dill==0.3.7
     #   datasets
     #   evaluate
     #   multiprocess
-dragon-baseline==0.1
+dragon-baseline==0.2.0
     # via -r requirements.in
-evaluate==0.4.1
+evaluate==0.4.2
     # via dragon-baseline
 evalutils==0.4.2
     # via dragon-baseline
-filelock==3.13.1
+filelock==3.14.0
     # via
     #   huggingface-hub
     #   torch
     #   transformers
     #   triton
-frozenlist==1.4.0
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
@@ -76,29 +74,29 @@ huggingface-hub==0.17.3
     #   evaluate
     #   tokenizers
     #   transformers
-idna==3.4
+idna==3.7
     # via
     #   requests
     #   yarl
-imageio[tifffile]==2.32.0
+imageio[tifffile]==2.34.1
     # via evalutils
-jinja2==3.1.2
+jinja2==3.1.3
     # via
     #   cookiecutter
     #   torch
-joblib==1.3.2
+joblib==1.4.2
     # via scikit-learn
-lit==17.0.5
+lit==18.1.4
     # via triton
 markdown-it-py==3.0.0
     # via rich
-markupsafe==2.1.3
+markupsafe==2.1.5
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
 mpmath==1.3.0
     # via sympy
-multidict==6.0.4
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
@@ -106,9 +104,9 @@ multiprocess==0.70.15
     # via
     #   datasets
     #   evaluate
-networkx==3.2.1
+networkx==3.3
     # via torch
-numpy==1.26.2
+numpy==1.26.4
     # via
     #   accelerate
     #   datasets
@@ -148,7 +146,7 @@ nvidia-nccl-cu11==2.14.3
     # via torch
 nvidia-nvtx-cu11==11.7.91
     # via torch
-packaging==23.2
+packaging==24.0
     # via
     #   accelerate
     #   build
@@ -156,31 +154,35 @@ packaging==23.2
     #   evaluate
     #   huggingface-hub
     #   transformers
-pandas==2.1.3
+pandas==2.2.2
     # via
     #   datasets
     #   dragon-baseline
     #   evaluate
     #   evalutils
-pillow==10.0.1
+pillow==10.3.0
     # via imageio
-pip-tools==7.3.0
+pip-tools==7.4.1
     # via evalutils
-psutil==5.9.6
+psutil==5.9.8
     # via accelerate
-pyarrow==14.0.1
+pyarrow==16.0.0
     # via datasets
-pygments==2.16.1
+pyarrow-hotfix==0.6
+    # via datasets
+pygments==2.17.2
     # via rich
-pyproject-hooks==1.0.0
-    # via build
-python-dateutil==2.8.2
+pyproject-hooks==1.1.0
+    # via
+    #   build
+    #   pip-tools
+python-dateutil==2.9.0.post0
     # via
     #   arrow
     #   pandas
-python-slugify==8.0.1
+python-slugify==8.0.4
     # via cookiecutter
-pytz==2023.3.post1
+pytz==2024.1
     # via pandas
 pyyaml==6.0.1
     # via
@@ -189,7 +191,7 @@ pyyaml==6.0.1
     #   datasets
     #   huggingface-hub
     #   transformers
-regex==2023.10.3
+regex==2024.4.28
     # via transformers
 requests==2.31.0
     # via
@@ -198,19 +200,18 @@ requests==2.31.0
     #   evaluate
     #   fsspec
     #   huggingface-hub
-    #   responses
     #   transformers
-responses==0.18.0
-    # via evaluate
-rich==13.6.0
+rich==13.7.1
     # via cookiecutter
-safetensors==0.4.0
-    # via transformers
-scikit-learn==1.3.2
+safetensors==0.4.3
+    # via
+    #   accelerate
+    #   transformers
+scikit-learn==1.4.2
     # via
     #   evalutils
     #   seqeval
-scipy==1.11.3
+scipy==1.13.0
     # via
     #   evalutils
     #   scikit-learn
@@ -224,9 +225,9 @@ sympy==1.12
     # via torch
 text-unidecode==1.3
     # via python-slugify
-threadpoolctl==3.2.0
+threadpoolctl==3.5.0
     # via scikit-learn
-tifffile==2023.9.26
+tifffile==2024.4.24
     # via imageio
 tokenizers==0.14.1
     # via transformers
@@ -234,14 +235,13 @@ tomli==2.0.1
     # via
     #   build
     #   pip-tools
-    #   pyproject-hooks
 torch==2.0.1
     # via
     #   accelerate
     #   dragon-baseline
     #   triton
     #   xformers
-tqdm==4.66.1
+tqdm==4.66.4
     # via
     #   datasets
     #   evaluate
@@ -251,19 +251,17 @@ transformers==4.35.0
     # via dragon-baseline
 triton==2.0.0
     # via torch
-types-python-dateutil==2.8.19.14
+types-python-dateutil==2.9.0.20240316
     # via arrow
-typing-extensions==4.8.0
+typing-extensions==4.11.0
     # via
     #   huggingface-hub
     #   torch
-tzdata==2023.3
+tzdata==2024.1
     # via pandas
-urllib3==2.1.0
-    # via
-    #   requests
-    #   responses
-wheel==0.41.3
+urllib3==2.2.1
+    # via requests
+wheel==0.43.0
     # via
     #   nvidia-cublas-cu11
     #   nvidia-cuda-cupti-cu11
@@ -278,7 +276,7 @@ xxhash==3.4.1
     # via
     #   datasets
     #   evaluate
-yarl==1.9.2
+yarl==1.9.4
     # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
